--- a/Index.html
+++ b/Index.html
@@ -6,24 +6,26 @@
     </head>
     <body>
         <h1><em>Les ruchers du mont Mézenc</em></h1>
-        <p><img src="photojpeg" </p>
+        <p><img src="montmezenc.jpeg" alt="Photo du mont mézenc" title="Le Mont Mézenc"/> </p>
         <h2>Naturel et délicieux</h2>
-        <p>Le miel du <em>Mont Mézenc</em> est un miel naturel issue du savoir faire ancestrale des abeilles.</p>
+        <p>Le miel du <em><strong>Mont Mézenc</strong></em> est un miel naturel issue du savoir faire ancestrale des abeilles.</p>
         <p>L'air pur du plateau ainsi que sa flore préservé permettent aux abeilles de produire un miel excquis d'une saveur inégalable.</p>
         <p>Notre miel est récolté dans le respect de la tradition apicole afin de préserver la pureté de ses arômes.</p>
         <h2>Nos ruches</h2>
-        <p>Nos ruches sont implantées au coeur du <em>Mont Mézenc</em> pour que les abeilles puissent bénéficier du cadre idéal afin de produire <br>le meilleur miel.</p>
+        <p>Nos ruches sont implantées au coeur du <em><strong>Mont Mézenc</strong></em> pour que les abeilles puissent bénéficier du cadre idéal afin de produire <br>le meilleur miel.</p>
         <h2>Notre production</h2>
-        <p>Les abeilles du ruchers du <em>Mont Mézenc</em> vous proposent plusieurs produits:</p>
+        <p>Les abeilles du ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent plusieurs produits:</p>
         <ul>
             <Li>Le miel naturel</Li>
             <Li>La gelée royale</Li>
             <Li>Les bonbons au miel</Li>
         </ul>
         <h2>Venez visiter nos ruchers</h2>
-        <p>Les ruchers du <em>Mont Mézenc</em> vous invites à venir découvrir nos ruchers, nos procédés d'apiculture ainsi que notre philosophie écologique.</p>
+        <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous invites à venir découvrir nos ruchers, nos procédés d'apiculture ainsi que notre philosophie écologique.</p>
         <p>Nous vous proposons plusieurs formules afin de partager un merveilleux moment à nos cotés dans ce cadre idyllique.</p>
-    
+        <a href ="Page2.html">
+            Visitez La boutique en ligne
+        </a>
 
         <!-- Ma ligne de commentaire -->
     </body>
