--- a/Index.html
+++ b/Index.html
@@ -3,22 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Les ruchers du mont Mézenc</title>
+        <link rel="stylesheet" href="style.css"
     </head>
     <body>
         <h1><em>Les ruchers du mont Mézenc</em></h1>
         <p><img src="montmezenc.jpeg" alt="Photo du mont mézenc" title="Le Mont Mézenc"/> </p>
         <h2>Naturel et délicieux</h2>
-        <p>Le miel du <em><strong>Mont Mézenc</strong></em> est un miel naturel issue du savoir faire ancestrale des abeilles.</p>
+        <p>Le miel du <em><strong>Mont Mézenc</strong></em> est un miel <span class="introduction">naturel</span> issue du savoir faire ancestrale des abeilles.</p>
         <p>L'air pur du plateau ainsi que sa flore préservé permettent aux abeilles de produire un miel excquis d'une saveur inégalable.</p>
         <p>Notre miel est récolté dans le respect de la tradition apicole afin de préserver la pureté de ses arômes.</p>
-        <h2>Nos ruches</h2>
-        <p>Nos ruches sont implantées au coeur du <em><strong>Mont Mézenc</strong></em> pour que les abeilles puissent bénéficier du cadre idéal afin de produire <br>le meilleur miel.</p>
+        <h2 class="maclasse">Nos ruches</h2>
+        <p>Nos ruches sont implantées au coeur du <em><strong>Mont Mézenc</strong></em> pour que les abeilles puissent bénéficier du cadre idéal afin de produire le meilleur miel.</p>
         <h2>Notre production</h2>
         <p>Les abeilles du ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent plusieurs produits:</p>
         <ul>
-            <Li>Le miel naturel</Li>
-            <Li>La gelée royale</Li>
-            <Li>Les bonbons au miel</Li>
+            <Li><a href="Page2.html#mielnaturel">Le miel naturel</a></Li>
+            <Li><a href="Page2.html#geleeroyale">La gelée royale</a></Li>
+            <Li><a href="Page2.html#bonbons">Les bonbons au miel</a></Li>
         </ul>
         <h2>Venez visiter nos ruchers</h2>
         <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous invites à venir découvrir nos ruchers, nos procédés d'apiculture ainsi que notre philosophie écologique.</p>
