--- a/Page2.html
+++ b/Page2.html
@@ -3,26 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Page2</title>
+        <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <h1><em>La Boutique des ruchers du Mont Mézenc</em></h1>
+        <h1><em>La Boutique des ruchers du Mont Mézenc</em></h1> <a href="Index.html"> Accueil </a>
         <p><img src="rucheabeille.jpg" alt="Photo d'abeilles"/> </p>
-        <h2>Naturel et délicieux</h2>
-        <p>Le miel du <em><strong>Mont Mézenc</strong></em> est un miel naturel issue du savoir faire ancestrale des abeilles.</p>
-        <p>L'air pur du plateau ainsi que sa flore préservé permettent aux abeilles de produire un miel excquis d'une saveur inégalable.</p>
-        <p>Notre miel est récolté dans le respect de la tradition apicole afin de préserver la pureté de ses arômes.</p>
-        <h2>Nos ruches</h2>
-        <p>Nos ruches sont implantées au coeur du <em><strong>Mont Mézenc</strong></em> pour que les abeilles puissent bénéficier du cadre idéal afin de produire <br>le meilleur miel.</p>
-        <h2>Notre production</h2>
-        <p>Les abeilles du ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent plusieurs produits:</p>
-        <ul>
-            <Li>Le miel naturel</Li>
-            <Li>La gelée royale</Li>
-            <Li>Les bonbons au miel</Li>
-        </ul>
-        <h2>Venez visiter nos ruchers</h2>
-        <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous invites à venir découvrir nos ruchers, nos procédés d'apiculture ainsi que notre philosophie écologique.</p>
-        <p>Nous vous proposons plusieurs formules afin de partager un merveilleux moment à nos cotés dans ce cadre idyllique.</p>
+        <h2 id="mielnaturel"> Le miel naturel</h2>
+        <p>Nos abeilles proposent différents parfums grâce à la diversité de la flore du <em><strong>Mont Mézenc</strong></em>.</p>
+        <h2 id="geleeroyale"> La gelée royale</h2>
+        <p>La gelée royale produite au <em><strong>Mont Mézenc</strong></em> à de multiples vertues qui renforcent notamment 
+            les défenses immunitaires, retardent le vieillissement cellulaire mais aussi favorise le bien être physique
+            et mental.</h2>
+        <h2 id="bonbons"> Les bonbons au miel</h2>
+        <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent de délicieux bonbons au miel aux multiples bienfaits.</p>
     
 
         <!-- Ma ligne de commentaire -->
