--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1><em>Les ruchers du mont Mézenc</em></h1>
-        <p><img src="montmezenc.jpeg" alt="Photo du mont mézenc" title="Le Mont Mézenc"/> </p>
+        <a class="menu1" href="Index.html">  <strong>Accueil</strong> </a> 
+        <a class="menu2" href="Page2.html">  <strong>La boutique</strong> </a>
+        <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a>
+        <p><div><img src="montmezenc.jpeg" alt="Photo du mont mézenc" title="Le Mont Mézenc"/></div></p>
         <h2>Naturel et délicieux</h2>
         <p>Le miel du <em><strong>Mont Mézenc</strong></em> est un miel <span class="introduction">naturel</span> issue du savoir faire ancestrale des abeilles.</p>
         <p>L'air pur du plateau ainsi que sa flore préservé permettent aux abeilles de produire un miel excquis d'une saveur inégalable.</p>
@@ -17,16 +20,19 @@
         <h2>Notre production</h2>
         <p>Les abeilles du ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent plusieurs produits:</p>
         <ul>
-            <Li><a href="Page2.html#mielnaturel">Le miel naturel</a></Li>
-            <Li><a href="Page2.html#geleeroyale">La gelée royale</a></Li>
-            <Li><a href="Page2.html#bonbons">Les bonbons au miel</a></Li>
+            <Li><a class="liste1" href="Page2.html#mielnaturel">Le miel naturel</a></Li>
+            <Li><a class="liste2" href="Page2.html#geleeroyale">La gelée royale</a></Li>
+            <Li><a class="liste3" href="Page2.html#bonbons">Les bonbons au miel</a></Li>
         </ul>
         <h2>Venez visiter nos ruchers</h2>
         <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous invites à venir découvrir nos ruchers, nos procédés d'apiculture ainsi que notre philosophie écologique.</p>
         <p>Nous vous proposons plusieurs formules afin de partager un merveilleux moment à nos cotés dans ce cadre idyllique.</p>
-        <a href ="Page2.html">
+        <p class="maclasse2"> <a href ="Page2.html">
             Visitez La boutique en ligne
-        </a>
+        </a> <br
+        class="maclasse1"> <a href="Page3.html">
+            Nous contacter
+        </a></P>
 
         <!-- Ma ligne de commentaire -->
     </body>
