--- a/Page2.html
+++ b/Page2.html
@@ -2,12 +2,16 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Page2</title>
+        <title>Les ruchers du mont Mézenc</title>
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <h1><em>La Boutique des ruchers du Mont Mézenc</em></h1> <a href="Index.html"> Accueil </a>
-        <p><img src="rucheabeille.jpg" alt="Photo d'abeilles"/> </p>
+        <h1><em>La Boutique des ruchers du Mont Mézenc</em></h1> 
+        <a class="menu1" href="Index.html">  <strong>Accueil</strong> </a> 
+        <a class="menu2" href="Page2.html">  <strong>La boutique</strong> </a>
+        <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a>
+
+        <p><div><img src="rucheabeille.jpg" alt="Photo d'abeilles"/> </div></p>
         <h2 id="mielnaturel"> Le miel naturel</h2>
         <p>Nos abeilles proposent différents parfums grâce à la diversité de la flore du <em><strong>Mont Mézenc</strong></em>.</p>
         <h2 id="geleeroyale"> La gelée royale</h2>
@@ -16,7 +20,14 @@
             et mental.</h2>
         <h2 id="bonbons"> Les bonbons au miel</h2>
         <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent de délicieux bonbons au miel aux multiples bienfaits.</p>
-    
+      
+        </a>
+        <p class="maclasse2"> <a href ="Page2.html">
+            Visitez La boutique en ligne
+        </a> <br
+        class="maclasse1"> <a href="Page3.html">
+            Nous contacter
+        </a></P>
 
         <!-- Ma ligne de commentaire -->
     </body>
