--- a/Index.html
+++ b/Index.html
@@ -6,10 +6,17 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <h1><em>Les ruchers du mont Mézenc</em></h1>
+        <header>
+        <h1><em>Les ruchers du mont Mézenc</em></h1> 
+        </header>
+
+        <nav>
         <a class="menu1" href="Index.html">  <strong>Accueil</strong> </a> 
         <a class="menu2" href="Page2.html">  <strong>La boutique</strong> </a>
-        <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a>
+        <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a> 
+        </nav>
+
+        <main>
         <p><div><img src="montmezenc.jpeg" alt="Photo du mont mézenc" title="Le Mont Mézenc"/></div></p>
         <h2>Naturel et délicieux</h2>
         <p>Le miel du <em><strong>Mont Mézenc</strong></em> est un miel <span class="introduction">naturel</span> issue du savoir faire ancestrale des abeilles.</p>
@@ -27,13 +34,16 @@
         <h2>Venez visiter nos ruchers</h2>
         <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous invites à venir découvrir nos ruchers, nos procédés d'apiculture ainsi que notre philosophie écologique.</p>
         <p>Nous vous proposons plusieurs formules afin de partager un merveilleux moment à nos cotés dans ce cadre idyllique.</p>
+        </main>
+
+        <footer>
         <p class="maclasse2"> <a href ="Page2.html">
             Visitez La boutique en ligne
         </a> <br
         class="maclasse1"> <a href="Page3.html">
             Nous contacter
         </a></P>
-
+        </footer>
         <!-- Ma ligne de commentaire -->
     </body>
 </html>
