--- a/Page2.html
+++ b/Page2.html
@@ -6,11 +6,17 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
+        <header>
         <h1><em>La Boutique des ruchers du Mont Mézenc</em></h1> 
+        </header>
+
+        <nav>
         <a class="menu1" href="Index.html">  <strong>Accueil</strong> </a> 
         <a class="menu2" href="Page2.html">  <strong>La boutique</strong> </a>
         <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a>
+        </nav>
 
+        <main>
         <p><div><img src="rucheabeille.jpg" alt="Photo d'abeilles"/> </div></p>
         <h2 id="mielnaturel"> Le miel naturel</h2>
         <p>Nos abeilles proposent différents parfums grâce à la diversité de la flore du <em><strong>Mont Mézenc</strong></em>.</p>
@@ -20,14 +26,17 @@
             et mental.</h2>
         <h2 id="bonbons"> Les bonbons au miel</h2>
         <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent de délicieux bonbons au miel aux multiples bienfaits.</p>
-      
         </a>
+        </main>
+        
+        <footer>
         <p class="maclasse2"> <a href ="Page2.html">
             Visitez La boutique en ligne
         </a> <br
         class="maclasse1"> <a href="Page3.html">
             Nous contacter
         </a></P>
+        </footer>
 
         <!-- Ma ligne de commentaire -->
     </body>
