--- a/Page3.html
+++ b/Page3.html
@@ -6,11 +6,21 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
+        <header>
         <h1><em>Les ruchers du mont Mézenc</em></h1>
+        </header>
+
+       <nav>
         <a class="menu1" href="Index.html">  <strong>Accueil</strong> </a> 
         <a class="menu2" href="Page2.html">  <strong>La boutique</strong> </a>
         <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a>
+       </nav>
+
+       <main>
+
+       </main>
        
+       <footer>
         <p class="maclasse3"> <a href ="Index.html">
             Accueil </a> <br
         class="maclasse2"> <a href ="Page2.html">
@@ -19,6 +29,7 @@
         class="maclasse1"> <a href="Page3.html">
             Nous contacter
         </a></P>
+        </footer>
         <!-- Ma ligne de commentaire -->
     </body>
 </html>
