--- a/Page2.html
+++ b/Page2.html
@@ -27,6 +27,29 @@
         <h2 id="bonbons"> Les bonbons au miel</h2>
         <p>Les ruchers du <em><strong>Mont Mézenc</strong></em> vous proposent de délicieux bonbons au miel aux multiples bienfaits.</p>
         </a>
+        <table>
+            <caption>Nos différents produits</caption>
+            <tr>
+                <th>Nature du produit</th>
+                <th>Type de récolte</th>
+                <th>Bienfaits</th>
+            </tr>
+            <tr>
+                <td>Le miel naturel</td>
+                <td>Récolte responsable</td>
+                <td>Le plein de vitamines</td>
+            </tr>
+            <tr>
+                <td>La gelée royale</td>
+                <td>Récolte responsable</td>
+                <td>Renforce les défenses immunitaires</td>
+            </tr>
+            <tr>
+                <td>Les bonsbons au miel</td>
+                <td>Récolte responsable</td>
+                <td>Adoucis la gorge</td>
+            </tr>
+        </table>
         </main>
         
         <footer>
