--- a/Page3.html
+++ b/Page3.html
@@ -17,7 +17,18 @@
        </nav>
 
        <main>
-
+        <form action="" method="get">
+            <label for="prenom">Votre prénom</label> <br>
+            <input type="text" name="prenom" id="prenom"> <br>
+            <label for="nom">Votre Nom</label><br>
+            <input type="text" name="nom" id="nom"> <br>
+            <Label for="email">Votre E-mail</Label><br>
+            <input type="email" name="email" id="email"> <br>
+            <label for="telephone">Votre numéro de téléphone</label><br>
+            <input type="tel" name="telephone" id="telephone"> <br>
+            <Label for="message">Votre message</Label><br>
+            <input type="text" name="message" id="message"> <br>
+        </form>
        </main>
        
        <footer>
