--- a/Page3.html
+++ b/Page3.html
@@ -14,6 +14,7 @@
         <a class="menu1" href="Index.html">  <strong>Accueil</strong> </a> 
         <a class="menu2" href="Page2.html">  <strong>La boutique</strong> </a>
         <a class="menu3" href="Page3.html"> <strong>Nous contacter</strong> </a>
+        <p></p>
        </nav>
 
        <main>
@@ -27,7 +28,7 @@
             <label for="telephone">Votre numéro de téléphone</label><br>
             <input type="tel" name="telephone" id="telephone"> <br>
             <Label for="message">Votre message</Label><br>
-            <input type="text" name="message" id="message"> <br>
+            <textarea name="message" id="message" maxlength="300" ></textarea><br>
         </form>
        </main>
        
