--- a/Page3.html
+++ b/Page3.html
@@ -28,7 +28,7 @@
             <label for="telephone">Votre numéro de téléphone</label><br>
             <input type="tel" name="telephone" id="telephone"> <br>
             <Label for="message">Votre message</Label><br>
-            <textarea name="message" id="message" maxlength="300" ></textarea><br>
+            <textarea name="message" id="message" rows="20" cols="100"></textarea><br>
         </form>
        </main>
        
