--- a/Page3.html
+++ b/Page3.html
@@ -27,6 +27,13 @@
             <input type="email" name="email" id="email"> <br>
             <label for="telephone">Votre numéro de téléphone</label><br>
             <input type="tel" name="telephone" id="telephone"> <br>
+            <label for="objet">Quel est l'objet de votre demande ?</label><br>
+                <select name="objet" id="objet">
+                    <option value="renseignement">Obtenir un renseignement</option>
+                    <option value="reservation">Réserver pour une visite</option>
+                    <option value="commande">Faire une commande</option>
+                    <option value="autre">Autre demande</option>
+                </select><br>
             <Label for="message">Votre message</Label><br>
             <textarea name="message" id="message" rows="20" cols="100"></textarea><br>
         </form>
